--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'war'
+
     repositories {
         mavenCentral()
     }
