--- a/jax-ws-auth-server/build.gradle
+++ b/jax-ws-auth-server/build.gradle
@@ -1,15 +1,7 @@
-
-allprojects {
-    apply plugin: 'idea'
-}
-
-subprojects {
-    apply plugin: 'war'
-    repositories {
-        mavenCentral()
-    }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.5'
+dependencies {
+    compile 'org.apache.cxf:cxf-rt-frontend-jaxws:3.1.11'
+    compile 'org.apache.cxf:cxf-rt-transports-http:3.1.11'
+    compile 'org.springframework:spring-core:4.3.8.RELEASE'
+    compile 'org.springframework:spring-context:4.3.8.RELEASE'
+    compile 'org.springframework:spring-web:4.3.8.RELEASE'
 }
