--- a/jax-ws-auth-server/build.gradle
+++ b/jax-ws-auth-server/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile 'org.apache.cxf:cxf-rt-frontend-jaxws:3.1.11'
     compile 'org.apache.cxf:cxf-rt-transports-http:3.1.11'
+    compile 'org.apache.cxf:cxf-rt-ws-security:3.1.11'
     compile 'org.springframework:spring-core:4.3.8.RELEASE'
     compile 'org.springframework:spring-context:4.3.8.RELEASE'
     compile 'org.springframework:spring-web:4.3.8.RELEASE'
